--- a/simplesignage/manager/static/css/master-material.css
+++ b/simplesignage/manager/static/css/master-material.css
@@ -18,6 +18,14 @@
   box-shadow: 1px 2px #555;
 }
 
+/*container for content example in documentation*/
+.docitems{
+  /*display: block;*/
+  align-items: center;
+  top: 2em;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /*container for content*/
 .items{
@@ -41,6 +49,13 @@
   bottom: 0px;
 }
 
+.items.extra{
+  display: block;
+  width: 100%;
+  height: 2em;
+
+}
+
 /*footer style*/
 .footing{
   display: block;
@@ -53,6 +68,46 @@
 
 .footing table{
   width: 100%;
+}
+
+/* loading screen overlay to keep users from touching things*/
+/* The Modal (background) */
+.modal {
+  /*display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  display: block;
+  background-color: #fff;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 100%;
+}
+
+.modal-content img{
+  display: block;
+  width : 45%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.modal-content p{
+  display: block;
+  width : 45%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* toggle switch checkbox */
