modified the things to stop logging posts to json.

--- a/simplesignage/manager/templates/documentation.html
+++ b/simplesignage/manager/templates/documentation.html
@@ -39,7 +39,7 @@
           <h3>Content how-to:</h3>
           {% include "doccontentexample.html" %}
           <ol>
-            <li>Upload content, one file at a time, or a collection as a zip file using the the file upload bar at the bottom of the 'Content' page.</li>
+            <li>Upload content, one file at a time, or a collection as a zip file using the the file upload bar at the bottom of the 'Content' page. Your screen will play content in the order your content shows up in the 'Content' page, so you can upload multiple of the same file and it will be show in that order.</li>
             <p>Accepted formats: .pdf, .png, .jpg, .gif, and .mp4. <em> Hint: </em> by making content the same aspect ratio of your screens, it will remove the black bars on the sides of the screen, and possibly make the content nicer to look at.</p>
             <li>Preview your content by clicking on the icon, or edit your settings by pressing the <em>details</em> button</li>
             <li>The settings are as follows:</li>
@@ -47,7 +47,7 @@
                 <li>Delete on End : When the enddate is reached, the content item will be deleted ffrom the server and the video automatically recompiles and is deployed to the displays</li>
                 <li>End Date : The date where you want your content to be removed from the screens, this setting isn't used if <em> Delete on End </em> is disabled.</li>
                 <li>Start Date: The date when the content was uploaded, mainly for your reference, and for future development</li>
-                <li>Display Time: how long, in seconds, to display an image <b>This is only visable for png or jpg image content</b></li>
+                <li>Display Time: how long, in seconds, to display an image <b>This is only visable for pdf documents, png, or jpg image content</b></li>
                 <li>Play GIF: number of times to replay a GIF, max value of 300 times. <b>This is only visable for GIF content</b></li>
                 <li>Delete: Deletes the content, you are asked to confirm before the delete instruiction goes to the server, after you delete the content you can either click the 'compile video' button or let the server recompile when the next content item expires.</li>
               </ul>
