--- a/simplesignage/manager/templates/screens.html
+++ b/simplesignage/manager/templates/screens.html
@@ -36,7 +36,7 @@
                     <td></td>
                     <td>
                       <label for="tv.width" class="mui--text-left">Dimensions:</label><br>
-                      <input type="number" name="tv.width" value="{{ tv.width }}" style="width:45pt">x<input type="number" name="tv.height" value="{{ tv.height }}" style="width:45pt">
+                      {{ tv.width }}x{{ tv.height }}
                     </td>
                   </tr>
                   <tr>
