added passowrd reset form

--- a/simplesignage/manager/templates/appbar.html
+++ b/simplesignage/manager/templates/appbar.html
@@ -10,6 +10,7 @@
       </td>
       <td align="right">
         <a href="/admin" class="mui-btn mui-btn--primary">Admin</a>
+        <a href="{% url 'password_change' %}" class="mui-btn mui-btn--primary">Password Change</a>
         <a href="{% url 'logout' %}" class="mui-btn mui-btn--primary">Logout</a>
       </td>
     </tr>
