--- a/simplesignage/manager/templates/screens.html
+++ b/simplesignage/manager/templates/screens.html
@@ -25,7 +25,7 @@
             <div id="settings_{{tv.name}}" style="display:none">
               <div class="mui-divider"></div>
               <table>
-                <form class="mui-form" action="tvSettingsChange" method="post">
+                <form class="mui-form" action="/tvSettingsChange" method="post">
                   {% csrf_token %}
                   <tr>
                     <td style="width:32%">
